--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
-  "name": "weather-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
-    "@tanstack/router": "^0.0.1-beta.89",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.0.0-beta.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.0"
-  }
+    "name": "weather-app",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.11.16",
+        "@mui/material": "^5.13.0",
+        "@tanstack/react-router": "^0.0.1-beta.83",
+        "firebase": "^9.19.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-flagkit": "^2.0.4",
+        "react-hook-form": "^7.43.9",
+        "use-places-autocomplete": "^4.0.0"
+    },
+    "devDependencies": {
+        "@haaxor1689/eslint-config": "^3.0.0",
+        "@haaxor1689/prettier-config": "^3.0.0",
+        "@types/google.maps": "^3.53.1",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "@vitejs/plugin-react": "^4.0.0-beta.0",
+        "eslint": "^8.38.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.3.4",
+        "typescript": "^5.0.2",
+        "vite": "^4.3.0"
+    },
+    "eslintConfig": {
+        "extends": "@haaxor1689/eslint-config"
+    },
+    "prettier": {
+        "extends": "@haaxor1689/prettier-config",
+        "tabWidth": 4
+    }
 }
